Add services and home page

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Home from "../components/Home.astro";
+import Services from "../components/Services.astro";
 ---
 
-<Layout title="Welcome to Astro." />
+<Layout title="Challenge Domo">
+  <Home />
+  <Services />
+</Layout>
 
 <style></style>
