--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "bootstrap/dist/css/bootstrap.min.css";
+import "@fontsource-variable/montserrat";
 import Navbar from "../components/Navbar.astro";
 
 const { title } = Astro.props;
@@ -39,6 +40,7 @@ const { title } = Astro.props;
   }
 
   body {
+    font-family: "Montserrat Variable", sans-serif;
     background: #283345;
   }
 </style>
