--- a/frontend/src/components/Button.astro
+++ b/frontend/src/components/Button.astro
@@ -14,5 +14,12 @@ const { title } = Astro.props;
     border-radius: 3px;
     padding: 5px 20px;
     font-size: 14px;
+    transition: 1s all;
+
+    &:hover {
+      color: #ffffff;
+      background-color: #3871ff;
+      border: 1px solid #ffffff;
+    }
   }
 </style>
