Add Tech section

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -2,11 +2,13 @@
 import Layout from "../layouts/Layout.astro";
 import Home from "../components/Home.astro";
 import Services from "../components/Services.astro";
+import Tech from "../components/Tech.astro";
 ---
 
 <Layout title="Challenge Domo">
   <Home />
   <Services />
+  <Tech />
 </Layout>
 
 <style></style>
