--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -28,6 +28,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <script
+      src="https://kit.fontawesome.com/9c5a1ea69c.js"
+      crossorigin="anonymous"></script>
     <Navbar />
     <main>
       <slot />
