--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -3,12 +3,14 @@ import Layout from "../layouts/Layout.astro";
 import Home from "../components/Home.astro";
 import Services from "../components/Services.astro";
 import Tech from "../components/Tech.astro";
+import CaseStudies from "../components/Case-Studies.astro";
 ---
 
 <Layout title="Challenge Domo">
   <Home />
   <Services />
   <Tech />
+  <CaseStudies />
 </Layout>
 
 <style></style>
