--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -4,6 +4,7 @@ import Home from "../components/Home.astro";
 import Services from "../components/Services.astro";
 import Tech from "../components/Tech.astro";
 import CaseStudies from "../components/Case-Studies.astro";
+import About from "../components/About.astro";
 ---
 
 <Layout title="Challenge Domo">
@@ -11,6 +12,7 @@ import CaseStudies from "../components/Case-Studies.astro";
   <Services />
   <Tech />
   <CaseStudies />
+  <About />
 </Layout>
 
 <style></style>
