--- a/frontend/src/components/About.astro
+++ b/frontend/src/components/About.astro
@@ -3,6 +3,7 @@
 ---
 
 <section
+  id="about"
   class="container w-75 d-flex justify-content-center align-items-center pt-5 pb-5"
 >
   <div class="col-md-8">
