--- a/frontend/src/components/Case-Studies.astro
+++ b/frontend/src/components/Case-Studies.astro
@@ -3,20 +3,20 @@
     class="container w-75 d-flex justify-content-center align-items-center flex-column"
   >
     <span class="pt-5 pb-5 text-center">Clients we worked with</span>
-    <div class="d-flex justify-content-center align-items-center gap-5 pb-5">
-      <div>
+    <div class="row pb-5 gap-5">
+      <div class="col d-flex align-items-center justify-content-center">
         <img src="/TNW.png" alt="TNW" class="d-block" />
       </div>
-      <div>
+      <div class="col d-flex align-items-center justify-content-center">
         <img src="/Google.png" alt="Google" class="d-block" />
       </div>
-      <div>
+      <div class="col d-flex align-items-center justify-content-center">
         <img src="/Nike.png" alt="Nike" class="d-block" />
       </div>
-      <div>
+      <div class="col d-flex align-items-center justify-content-center">
         <img src="/Airbnb.png" alt="Airbnb" class="d-block" />
       </div>
-      <div>
+      <div class="col d-flex align-items-center justify-content-center">
         <img src="/ITNA.png" alt="IT News Africa" class="d-block" />
       </div>
     </div>
