--- a/frontend/src/components/Home.astro
+++ b/frontend/src/components/Home.astro
@@ -7,7 +7,7 @@ import Button from "./Button.astro";
   class="container w-75 d-flex flex-column justify-content-center align-items-start"
 >
   <div class="title_container col-md-6">
-    <h1 class="fs-1 fw-bold">We build beautiful and reliable web solutions</h1>
+    <h1 class="fs-2 fw-bold">We build beautiful and reliable web solutions</h1>
     <p class="fw-bolder">
       We strongly believe that communication, trust and transparency are the
       essential elements of successful business relationship. Ready for the
@@ -31,12 +31,13 @@ import Button from "./Button.astro";
     height: 100vh;
     .title_container {
       & h1 {
-        width: 50%;
+        width: 80%;
         color: #ffffff;
       }
 
       & p {
-        width: 50%;
+        width: 90%;
+        font-size: 14px;
         color: #818893;
       }
     }
