Add contact section

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -5,6 +5,7 @@ import Services from "../components/Services.astro";
 import Tech from "../components/Tech.astro";
 import CaseStudies from "../components/Case-Studies.astro";
 import About from "../components/About.astro";
+import Contact from "../components/Contact.astro";
 ---
 
 <Layout title="Challenge Domo">
@@ -13,6 +14,5 @@ import About from "../components/About.astro";
   <Tech />
   <CaseStudies />
   <About />
+  <Contact />
 </Layout>
-
-<style></style>
