Fix image services

--- a/frontend/src/components/Services.astro
+++ b/frontend/src/components/Services.astro
@@ -16,7 +16,7 @@ import Card from "./Card.astro";
   </div>
   <div class="row justify-content-center p-0 mx-auto m-md-0 gap-4">
     <Card
-      class="bi bi-journal-text rounded-circle fs-3 p-3"
+      class="fa-solid fa-file rounded-circle fs-3 p-3"
       h5="Bussiness & Product Concept"
     >
       <p class="card_p">
@@ -26,7 +26,7 @@ import Card from "./Card.astro";
       </p>
     </Card>
     <Card
-      class="bi bi-laptop rounded-circle fs-3 p-3"
+      class="fa-solid fa-computer rounded-circle fs-3 p-3"
       h5="Web & Mobile Development"
     >
       <p class="card_p">
@@ -36,7 +36,7 @@ import Card from "./Card.astro";
       </p>
     </Card>
     <Card
-      class="bi bi-pencil-square rounded-circle fs-3 p-3"
+      class="fa-solid fa-pencil rounded-circle fs-3 p-3"
       h5="UX & UI Design"
     >
       <p class="card_p">
@@ -57,7 +57,7 @@ import Card from "./Card.astro";
     }
   }
 
-  .bi {
+  .fa-solid {
     color: #ffffff;
     background-color: #3871ff;
   }
